# django-musicbrainz-connector

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  conf.py  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  test  test_settings.py
.github/workflows/: django.yml
django_musicbrainz_connector/: admin.py  apps.py  routers.py  urls.py  utils.py
django_musicbrainz_connector/api/: __init__.py  artist_credit.py  language.py  link.py  link_type.py  medium.py  medium_format.py  recording.py  recording_work_link.py  release.py  release_group.py  release_group_primary_type.py  release_packaging.py  release_status.py  script.py  track.py  work.py  work_type.py
django_musicbrainz_connector/migrations/: 0001_initial.py  0002_work.py  0003_artistcredit_link_linktype_recording_and_more.py  0004_script.py  0005_language_alter_script_options.py  0006_releasepackaging.py  0007_releasestatus_alter_worktype_options.py  0008_releasegroup_releasegroupprimarytype.py
django_musicbrainz_connector/models/: __init__.py  artist_credit.py  language.py  link.py  link_type.py  medium.py  medium_format.py  recording.py  recording_work_link.py  release.py  release_group.py  release_group_primary_type.py  release_packaging.py  release_status.py  script.py  track.py  work.py  work_type.py
django_musicbrainz_connector/tests/: settings.py  test_admin.py  test_routers.py  test_utils.py
django_musicbrainz_connector/tests/api/: test_artist_credit_api.py  test_language_api.py  test_link_api.py  test_link_type_api.py  test_medium_api.py  test_recording_api.py  test_recording_work_link_api.py  test_release_api.py  test_track_api.py  test_work_api.py  test_work_type_api.py
django_musicbrainz_connector/tests/fixtures/: artist-credit.json  language.json  link-type.json  link.json  medium-format.json  medium.json  recording-work-link.json  recording.json  release-group-primary-type.json  release-group.json  release-packaging.json  release-status.json  release.json  script.json  track.json  work-type.json  work.json
django_musicbrainz_connector/tests/models/: test_artist_credit.py  test_language.py  test_link_type.py  test_medium.py  test_medium_format.py  test_recording.py  test_recording_work_link.py  test_release.py  test_release_group.py  test_release_group_primary_type.py  test_release_packaging.py  test_release_status.py  test_script.py  test_track.py  test_work.py  test_work_type.py
docs/: changelog.rst  conf.py  index.rst  work.rst  work_type.rst
