[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3  # https://pycqa.github.io/isort/docs/configuration/options.html#multi-line-output
include_trailing_comma = true  # require trailing comma at the end of a list of imports in parentheses
line_length = 120  # https://pycqa.github.io/isort/docs/configuration/options.html#line-length

[tool.bandit]
assert_used = { skips = [ "*/test_*.py" ] } # Allow `assert` to be used in tests
