[metadata]
name = django-musicbrainz-connector
version = 0.0.1
description = A Django app that connects to a replica of the MusicBrainz database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marios-zindilis/django-musicbrainz-connector
author = Marios Zindilis
author_email = marios@zindilis.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    djangorestframework >= 3.14.0
tests_require =
    pytest >= 7.4.3
    pytest-django >= 4.6.0
    coverage >= 7.3.2

[options.extras_require]
test =
    flake8 >= 6.1.0
    black >= 23.10.1
    isort >= 5.12.0
    bandit >= 1.7.5

[flake8]
max-line-length=120

[coverage:run]
source = .
omit =
    manage.py
    setup.py
    conftest.py
    django_musicbrainz_connector/migrations/*.py
    django_musicbrainz_connector/tests/*

[coverage:report]
show_missing = true
